# linewise

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: energy.rs  lib.rs  plt.rs  polymer.rs  quad_tree.rs  sampler.rs  spline.rs  storage.rs
common/src/quad_tree/: rect.rs
dynamic/: Cargo.toml
dynamic/src/: main.rs
examples/: wave.rs
monte_carlo/: Cargo.toml
monte_carlo/examples/: wave.rs
monte_carlo/src/: builder.rs  lib.rs  main.rs
random/: Cargo.toml
random/src/: lib.rs
report/: compile  main.typ  watch
report/chapters/: abstract.typ  appendix.typ  comparison.typ  dim_analysis.typ  image.typ  introduction.typ  lagrange.typ  model.typ  monte_carlo.typ
report/scripts/: __main__.py  figs.py  lib.py  main.py  pyproject.toml
src/: energy.rs  lib.rs  main.rs  monte_carlo.rs  picture.rs  plt.rs  polymer.rs  quad_tree.rs  sampler.rs  spline.rs  utils.rs
src/monte_carlo/: builders.rs
src/polymer/: energy.rs
src/quad_tree/: iter.rs  rect.rs
tests/: bezier.rs
