[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
either = "1.13.0"
image = "0.25.2"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
plotters = "0.3.7"
random = { path = "../random" }
chrono = "0.4.39"
svg = "0.18.0"
anyhow = "1.0.95"
tiny-skia = "0.11.4"
